--- a/package.json
+++ b/package.json
@@ -18,9 +18,14 @@
   "dependencies": {
   },
   "devDependencies": {
-    "coffee-script": "~1.6.3",
+    "coffee-script": ">=1.7.1",
     "express":"4.x",
-    "mongoose":"3.8.8",
+    "cookie-parser":"1.3.1",
+    "express-session":"1.4.0",
+    "body-parser":"1.3.1",
+    "method-override":"2.0.2",
+    "errorhandler":"1.1.0",
+    "express-logger":"0.0.3",
     "mocha": "~1.12.0",
     "chai": "~1.7.2",
     "docco": "~0.6.2",
